# Veillend

./: README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: backend-task.yml
.github/workflows/: mobile-ci.yml  soroban-ci.yml
docs/migration/: privacy-hashing-research.md
veilend-backend/: .dockerignore  Dockerfile  INDEXER.md  README.md  docker-compose.yml  docker-entrypoint.sh  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
veilend-backend/prisma/: schema.prisma  seed.ts
veilend-backend/scripts/: validate-contract-spec.ts
veilend-backend/src/: app.module.ts  main.ts
veilend-backend/src/admin/: admin.controller.ts  admin.service.ts
veilend-backend/src/assets/: assets.controller.ts  assets.service.ts
veilend-backend/src/auth/: admin.guard.ts  auth.controller.spec.ts  auth.controller.ts  auth.module.ts  auth.service.spec.ts  auth.service.ts  jwt.strategy.spec.ts  jwt.strategy.ts
veilend-backend/src/config/: config.module.ts  stellar.config.ts  validation.ts
veilend-backend/src/events/: events.entity.ts
veilend-backend/src/indexer/: indexer.config.ts  indexer.controller.ts  indexer.module.ts  indexer.repository.ts  indexer.service.spec.ts  indexer.service.ts
veilend-backend/test/: correlation-id.e2e-spec.ts
veilend-mobile/: App.tsx  app.json  package-lock.json  package.json  tsconfig.json
veilend-soroban/: Cargo.toml  README.md  rust-toolchain.toml
veilend-soroban/src/: lib.rs
veilend-soroban/tests/: integration.rs
veilend-web/: .env.example  README.md  next.config.ts  package-lock.json  package.json
(+73 files in other folders)
