[package]
name = "veillend-contract"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = "=23.5.3"

[dev-dependencies]
soroban-sdk = { version = "=23.5.3", features = ["testutils"] }

[[test]]
name = "integration"
path = "tests/integration.rs"
harness = false